--- a/css/running.css
+++ b/css/running.css
@@ -258,7 +258,7 @@
     margin: 0 0 5px;
     font-size: 2.2rem;
     font-weight: 800;
-    color: #000;
+    color: #0c6b3f;
     font-family: 'Montserrat', sans-serif;
 }
 
