--- a/css/equipements.css
+++ b/css/equipements.css
@@ -97,11 +97,11 @@ main p{
 .quote p{
     font-size: 1.8rem;
     line-height: 1.7;
-    margin: 0 0 10px;
+    margin: 0;
 }
 
 .quote footer{
-    margin-top: 10px;
+    margin-top: 6px;
     font-weight: 700;
     font-style: normal;
     color: #555;
