--- a/css/equipements.css
+++ b/css/equipements.css
@@ -113,7 +113,7 @@ main p{
     max-width: 1200px;
     margin: 0 auto 60px;
     padding: 40px 60px 60px;
-    background: #f5ffd9;
+    background: #ffffff;
     border-radius: 16px;
     box-shadow: 0 10px 25px rgba(0,0,0,0.08);
 }
