--- a/css/equipements.css
+++ b/css/equipements.css
@@ -146,7 +146,7 @@ main p{
     font-size: 2.2rem;
     font-weight: 800;
     font-family: 'Montserrat', sans-serif;
-    color: #000;
+    color: #0c6b3f;
 }
 
 /* ===== BOX 3 ===== */
