--- a/css/equipements.css
+++ b/css/equipements.css
@@ -167,7 +167,7 @@ main p{
     font-size: 3rem;
     font-weight: 800;
     font-family: 'Montserrat', sans-serif;
-    color: #000;
+    color: #0c6b3f;
 }
 
 .season-buttons{
