--- a/css/running.css
+++ b/css/running.css
@@ -212,7 +212,7 @@
 
 .running-carousel .item img{
     width: 100%;
-    height: 100%;
+    height: 300px;
     object-fit: cover;
     object-position: center;
     display: block;
