--- a/css/selection-ete.css
+++ b/css/selection-ete.css
@@ -258,4 +258,13 @@ main p{
         flex-direction: column;
         align-items: center;
     }
+
+    .cold-favorites{
+        padding: 25px 20px 30px;
+    }
+
+    .favorites-grid{
+        flex-direction: column;
+    }
+}
 }
