--- a/css/home.css
+++ b/css/home.css
@@ -97,7 +97,7 @@ main h2{
     color: #ffffff;
 }
 
-/* ===== A PROPOS / REST ===== */
+/* ===== A PROPOS ===== */
 main{
     max-width: 1200px;
     margin: 0 auto 60px;
